--- a/write_up.tex
+++ b/write_up.tex
@@ -71,6 +71,7 @@
 \usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
 \renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
 \renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
+\newcommand{\tab}{\hspace*{2em}}
 
 
 %%% END Article customizations
@@ -186,6 +187,8 @@ LibCV
 \subsection{IP Streamer}
 \subsection{Commit Log}
 \subsection{Other}{Python code, Interval, GMaps}
+
+\section{Glossary and Index}
 
 
 \end{document}
